--- a/styles.css
+++ b/styles.css
@@ -51,9 +51,37 @@ nav ul li .dropdown-about {
   top: 100%;
   left: 0;
   background-color: #9e82f0;
-  padding: 10px;
   min-width: 150px;
 }
 nav ul li:hover .dropdown-about {
+  display: block;
+}
+nav ul li:hover .dropdown-about ul {
+  width: 100%;
+  display: block;
+  cursor: pointer;
+}
+nav ul li:hover .dropdown-about ul li a {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+nav ul li:hover .dropdown-about ul li a .fa-angle-right {
+  display: none;
+  font-size: 16px;
+  color: black;
+}
+nav ul li:hover .dropdown-about ul li a:hover .fa-angle-right {
+  display: flex;
+}
+nav ul li:hover .dropdown-about ul li .dropdown-history {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  background-color: #9e82f0;
+  min-width: 150px;
+}
+nav ul li:hover .dropdown-about ul li:hover .dropdown-history {
   display: block;
 }/*# sourceMappingURL=styles.css.map */
