--- a/styles.scss
+++ b/styles.scss
@@ -50,12 +50,47 @@ nav {
         top: 100%;
         left: 0;
         background-color: #9e82f0;
-        padding: 10px;
         min-width: 150px;
       }
 
       &:hover .dropdown-about {
         display: block;
+        // position: absolute;
+        ul {
+          width: 100%;
+          display: block;
+          cursor: pointer;
+          li {
+            a {
+              display: flex;
+              justify-content: space-between;
+              padding: 0 10px;
+              .fa-angle-right {
+                display: none;
+                font-size: 16px;
+                color: black;
+              }
+
+              &:hover .fa-angle-right {
+                display: flex;
+              }
+            }
+
+            .dropdown-history {
+              display: none;
+              position: absolute;
+              top: 0;
+              left: 100%;
+              background-color: #9e82f0;
+              min-width: 150px;
+            }
+
+            &:hover .dropdown-history {
+              display: block;
+              //   position: absolute;
+            }
+          }
+        }
       }
     }
   }
